# qbot2e_description

./: CMakeLists.txt  model.config  package.xml  readme.md
launch/: gazebo.launch
media/materials/scripts/: QBot2e.material
